--- a/css/screen.css
+++ b/css/screen.css
@@ -63,10 +63,9 @@ table {
 }
 
 body {
-  font-family: Helvetica;
   font-size: 16px;
   line-height: 21px;
-  background: lightgrey;
+  background: #FF7034;
 }
 
 a {
@@ -126,4 +125,8 @@ header {
 
 h2 {
   text-align: center;
+}
+
+html {
+  font-family: 'Oswald', sans-serif;
 }
