--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -54,6 +54,7 @@ header {
   background-color: white;
   width: 100%;
   position: fixed;
+  font-family: 'Oswald', sans-serif;
 }
 
 .nav {
@@ -64,15 +65,16 @@ header {
   }
 }
 
+.testimonials {
+  font-family: 'Open Sans Condensed', sans-serif;
+}
+
 .most {
   padding: 100px 20px 20px 20px;
   text-align: top;
+  font-family: 'Open Sans Condensed', sans-serif;
 }
 
 h2 {
   text-align: center;
-}
-
-html {
-  font-family: 'Oswald', sans-serif;
 }
