--- a/css/screen.css
+++ b/css/screen.css
@@ -77,9 +77,14 @@ p {
 }
 
 h1 {
-  font-size: 24px;
   font-weight: bold;
   margin-bottom: .8em;
+}
+
+h2 {
+  font-size: 24px;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .content {
@@ -105,18 +110,28 @@ h1 {
 }
 
 header {
-  display: inline-block;
   background-color: white;
   width: 100%;
   position: fixed;
   font-family: 'Oswald', sans-serif;
 }
 
-.nav {
+.n, .a, .i, .v, .right {
   margin-right: 10px;
+  display: inline-block;
 }
-.nav:first-of-type {
+.n:first-of-type, .a:first-of-type, .i:first-of-type, .v:first-of-type, .right:first-of-type {
   font-weight: bold;
+}
+
+.n {
+  font-size: 30px;
+  padding: 5px 5px 5px 5px;
+}
+
+.right {
+  float: right;
+  font-size: 24px;
 }
 
 .testimonials {
@@ -124,11 +139,7 @@ header {
 }
 
 .most {
-  padding: 100px 20px 20px 20px;
+  padding: 120px 20px 20px 20px;
   text-align: top;
   font-family: 'Open Sans Condensed', sans-serif;
-}
-
-h2 {
-  text-align: center;
 }
