--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -22,9 +22,14 @@ p {
 }
 
 h1 {
-  font-size: 24px;
   font-weight: bold;
   margin-bottom: .8em;
+}
+
+h2 {
+  font-size: 24px;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .content {
@@ -50,19 +55,29 @@ h1 {
 }
 
 header {
-  display: inline-block;
   background-color: white;
   width: 100%;
   position: fixed;
   font-family: 'Oswald', sans-serif;
 }
 
-.nav {
+.n, .a, .i, .v, .right {
   margin-right: 10px;
+  display: inline-block;
 
   &:first-of-type {
     font-weight: bold;
   }
+}
+
+.n {
+  font-size: 30px;
+  padding: 5px 5px 5px 5px;
+}
+
+.right {
+  float: right;
+  font-size: 24px;
 }
 
 .testimonials {
@@ -70,11 +85,7 @@ header {
 }
 
 .most {
-  padding: 100px 20px 20px 20px;
+  padding: 120px 20px 20px 20px;
   text-align: top;
   font-family: 'Open Sans Condensed', sans-serif;
-}
-
-h2 {
-  text-align: center;
 }
