--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -17,6 +17,10 @@ a {
   color: #800000;
 }
 
+a:hover {
+  color: #E87B24
+}
+
 p {
   margin-bottom: 1.1em;
 }
@@ -85,7 +89,7 @@ header {
 }
 
 .most {
-  padding: 120px 20px 20px 20px;
+  padding: 54px 20px 20px 20px;
   text-align: top;
   font-family: 'Open Sans Condensed', sans-serif;
 }
